<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="election_info">Election Information</string>

    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>

    <string name="location_permission_required">Location Permission Required</string>
    <string name="location_permission_description">Location permission has been permanently denied. Please enable it in the app settings to use this feature.</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
</resources>
